--- a/report-final/refs.bib
+++ b/report-final/refs.bib
@@ -1,6 +1,7 @@
-@book{Webster2023linuxmint,
+@misc{Webster2023linuxmint,
   title  = {linuxmint/warpinator},
   url    = {https://github.com/linuxmint/warpinator},
+  howpublished = {\url{https://github.com/linuxmint/warpinator}},
   author = {Webster et al.},
   date   = {2023-10-16},
   year   = {2023},
@@ -26,30 +27,12 @@
   series    = {MobiWac '06}
 }
 
-@misc{AppleSupport,
-  author  = {Apple},
-  url     = {https://support.apple.com/guide/iphone/use-airdrop-to-send-items-iphcd8b9f0af/ios},
-  title   = {Use AirDrop on iPhone to send items to nearby devices},
-  journal = {Apple Support}
-} 
+ 
 
-@misc{AppleSupportSecurity,
-  author  = {Apple},
-  url     = {https://support.apple.com/guide/security/airdrop-security-sec2261183f4/web},
-  title   = {AirDrop security},
-  journal = {Apple Support}
-} 
-
-@misc{AndroidDevelopers,
-  author  = {Android Deelopers},
-  url     = {https://developer.android.com/training/beam-files},
-  title   = { Sharing files with NFC},
-  journal = {Android Developers}
-} 
-
-@misc{Cantisano_2022,
+@article{Cantisano_2022,
   title   = {Android beam will be removed permanently with the release of Android 14},
   url     = {https://www.xda-developers.com/android-beam-permanent-removal-android-14/},
+  howpublished = {/url{https://www.xda-developers.com/android-beam-permanent-removal-android-14/}},
   journal = {XDA Developers},
   author  = {Cantisano, Timi},
   year    = {2022},
@@ -57,12 +40,40 @@
 } 
 
 @article{WifiDirect,
-author = {Khan, Muhammad Asif and Chérif, Wael and Filali, Fethi and Ridha, Hamila},
-year = {2017},
-month = {06},
-pages = {},
-title = {Wi-Fi Direct Research - Current Status and Future Perspectives},
-volume = {93},
-journal = {Journal of Network and Computer Applications},
-doi = {10.1016/j.jnca.2017.06.004}
+  author  = {Khan, Muhammad Asif and Chérif, Wael and Filali, Fethi and Ridha, Hamila},
+  year    = {2017},
+  month   = {06},
+  pages   = {},
+  title   = {Wi-Fi Direct Research - Current Status and Future Perspectives},
+  volume  = {93},
+  journal = {Journal of Network and Computer Applications},
+  doi     = {10.1016/j.jnca.2017.06.004}
+}
+
+@misc{Bridgefy,
+  author       = {Bridgefy},
+  title        = {Bridgefy},
+  url          = {https://bridgefy.me/},
+  howpublished = {\url{https://bridgefy.me/}}
+} 
+
+@misc{AppleSupport,
+  author       = {Apple},
+  url          = {https://support.apple.com/guide/iphone/use-airdrop-to-send-items-iphcd8b9f0af/ios},
+  title        = {Use AirDrop on iPhone to send items to nearby devices},
+  howpublished = {\url{https://support.apple.com/guide/iphone/use-airdrop-to-send-items-iphcd8b9f0af/ios}}
+} 
+
+@misc{AppleSupportSecurity,
+  author       = {Apple},
+  url          = {https://support.apple.com/guide/security/airdrop-security-sec2261183f4/web},
+  title        = {AirDrop security},
+  howpublished = {\url{https://support.apple.com/guide/security/airdrop-security-sec2261183f4/web}}
+} 
+
+@misc{AndroidDevelopers,
+  author       = {Android Deelopers},
+  url          = {https://developer.android.com/training/beam-files},
+  title        = { Sharing files with NFC},
+  howpublished = {\url{https://developer.android.com/training/beam-files}}
 }
